--- a/src/stylesheets/_sidebar.sass
+++ b/src/stylesheets/_sidebar.sass
@@ -289,6 +289,9 @@
     background-color: base.$dark-background-2
     border-right-color: base.$dark-outline
 
+    h2
+        color: white
+
     hr
         border-color: base.$dark-outline
 
@@ -297,6 +300,13 @@
 
     .hide-sidebar, .create-brd-btn
         background-color: base.$dark-background-2
+
+    .notifications-modal
+        background-color: base.$dark-background-2
+
+    .notification
+        background-color: base.$dark-background-1
+        color: white
 
     
     
